Do not use the stylus id to set the preset

Using the stylus' unique id to set the preset allowed users to
have different presets for e.g. an art pen and a normal stylus.

However, we are seeing random stylus id's for the same actual
stylus being reported, which means that this feature is completely
broken.

BUG:407659
BACKPORT:krita/4.2